--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button id="reset-btn">Reset</button>
         </div>
         <div id="deck-area">
-            <img id="deck-image" src="assets/cards/back.png" alt="Deck">
+            <img id="deck-image" src="assets/back.png" alt="Deck"> <!-- Updated path -->
         </div>
         <p id="message"></p>
     </div>
